--- a/index.html
+++ b/index.html
@@ -1,22 +1,135 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - Welcome</title>
+  <title>자생력을 키워라</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146409869-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146409869-1');
+  </script>
+    <style>
+      body {
+        margin:0;
+      }
+      a {
+        color:black;
+        text-decoration: none;
+
+      }
+
+      h1 {
+        font-size: 60px; text-align: center;
+        border-bottom:2px solid gray;
+        margin:0; padding:20px;
+      }
+      ol {
+        border-right:1px solid gray;
+        width:100px;
+        margin:0;
+        padding:20px;
+      }
+      #grid {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+      }
+      #grid ol {
+        padding-left:33px;
+      }
+      #grid #article {
+        padding-left:25px;
+      }
+    </style>
+
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a</h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
+  <h1><a href="index.html">자생력을 키워라</a></h1>
+  <div id="grid">
+    <ol>
+      <li><a href="shoppingmall.html"
+        >쇼핑몰</a></li>
+      <li><a href="preventive.html"
+        >방역</a></li>
+      <li><a href="chiller system.html"
+        >냉동기</a></li>
+    </ol>
+    <div id="article">
 
-  <h2>WEB</h2>
-  <p><a href="https://www.w3.org/TR/html52/"target="_blank" title="html5 speicification">Hypertext Markup Language(HTML)</a>우리는 <strong> 지금 갈림길에 </strong> 서있다 그리고 난 그 길을 선태해야만 한다.</p>
-  <strong> the  enercon name </strong> training centres represent a roundbreaking training concept that guarantees
-  <p>지금은 나의 목표를 향해 나아갈때이다.</p>
-  <img src="photo1.jpg"  width="100%">
+    <!--
+    <ol>
+      <li><a href="shoppingmall.html"><font color="red">쇼핑몰</font></a></li>
+      <li><a href="preventive.html"><font color="red">방역</font></a></li>
+      <li><a href="chiller system.html"><font color="red">냉동기</font></a></li>
+    </ol>
+  -->
+
+    <h2>터전만들기</h2>
+
+      <p>진행과정</p>
+      <p>위탁 사입 구매대행 그리고 아이템선정 등등 많은 문제들이 있다
+        이 과정에서 우리가 익숙한 것은 단 하나도 없다.</p>
+        <img src="delivery 1.jpg" width="20%"></img>
+        <p>
+          <iframe width="20%" height="30%"
+          src="https://www.youtube.com/embed/3-H6LnK7YK8" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        </p>
+   </div>
+ </div>
+      <!--
+      <p>
+        <iframe width="1280" height="753"
+        src="https://www.youtube.com/embed/3-H6LnK7YK8" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      </p>
+  -->
+  <p>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5d61f773eb1a6b0be60935a5/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
+  </p>
+
+  <div id="disqus_thread"></div>
+  <script>
+
+  /**
+  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+  var disqus_config = function () {
+  this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  */
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = 'https://web1-x3opyub5jr.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+</p>
+
 </body>
 </html>
